k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-saver
  namespace: default
  labels:
    app: image-saver
spec:
  selector:
    app: image-saver
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
